-fix index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <header>
   <h1>Ahmad Nizar</h1>
-  <p>A Wanne be full stack developer</p>
+  <p>A Wanna be full stack developer</p>
 </header>
 <ul>
     <li><a href="#" onclick="article()">Home</a></li>
